test against latest 3.x release

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,7 @@
 [buildout]
-extends = plone3.cfg
+extends = http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.3.cfg
 develop = .
 
 [instance]
 eggs += collective.usernamelogger
 zcml += collective.usernamelogger
-products =
