--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,4 @@
 [buildout]
-extends = http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.5.cfg
-develop = .
-
-[instance]
-eggs += collective.usernamelogger
+extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.0.x.cfg
+package-name = collective.usernamelogger
+package-extras = [test]
