--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,4 @@
 [buildout]
-extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.0.x.cfg
+extends = https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 package-name = collective.usernamelogger
 package-extras = [test]
